# DecentralizedDummyProcess

./: CMakeLists.txt  JSON_manager.cpp  file.cpp  main.cpp  time-tp.c
Doxygen/: DecentralizedDummyDOXYGEN
Doxygen/html/: JSON__manager_8cpp.html  JSON__manager_8cpp__incl.map  JSON__manager_8cpp__incl.md5  JSON__manager_8h.html  JSON__manager_8h__dep__incl.map  JSON__manager_8h__dep__incl.md5  JSON__manager_8h__incl.map  JSON__manager_8h__incl.md5  JSON__manager_8h_source.html  annotated.html  classJSON__manager-members.html  classJSON__manager.html  classes.html  classfile-members.html  classfile.html  classfile__coll__graph.map  classfile__coll__graph.md5  classfile_a6f3aeac1f4b08cd52b7879ea999fded1_cgraph.map  classfile_a6f3aeac1f4b08cd52b7879ea999fded1_cgraph.md5  data__storage_8h.html  data__storage_8h__dep__incl.map  data__storage_8h__dep__incl.md5  data__storage_8h__incl.map  data__storage_8h__incl.md5  dir_09e761304027c904456130627fd4dcf5.html  file_8cpp.html  file_8cpp__incl.map  file_8cpp__incl.md5  file_8h.html  file_8h__dep__incl.map  file_8h__dep__incl.md5  file_8h__incl.map  file_8h__incl.md5  file_8h_source.html  files.html  functions.html  functions_c.html  functions_d.html  functions_f.html  functions_func.html  (+45 more)
Doxygen/latex/: JSON__manager_8cpp.tex  JSON__manager_8cpp__incl.md5  JSON__manager_8h.tex  JSON__manager_8h__dep__incl.md5  JSON__manager_8h__incl.md5  annotated.tex  classJSON__manager.tex  classfile.tex  classfile__coll__graph.md5  data__storage_8h.tex  data__storage_8h__incl.md5  (+19 more)
includes/: JSON_manager.h  data_storage.h  file.h  time-tp.h
(+39 files in other folders)
